<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp"
    tools:context="ch.bfh.univotemobile.activities.RegistrationActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:layout_weight="1"
            android:text="@string/generate_key_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_generate_key"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="0dp"
            android:paddingTop="3dp"
            android:text="@string/generate_key" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:layout_weight="1"
            android:text="@string/key"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edit_text_private_key"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:paddingTop="3dp" >

        </EditText>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:layout_weight="1"
            android:text="@string/protect_key_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:text="@string/enter_password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edit_text_password1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:inputType="textPassword"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:paddingTop="3dp"
            android:text="@string/re_enter_password"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edit_text_password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:text="@string/options"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:text="@string/choose_identity_function"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spinner_identity_function"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:entries="@array/identity_function"
            android:prompt="@string/choose_identity_function"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:paddingTop="3dp"
            android:text="@string/save_key_on_device_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_save_key_on_device"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="0dp"
            android:paddingTop="3dp"
            android:text="@string/save_key_on_device" />

    </LinearLayout>

</ScrollView>